[package]
name = "dictionay_link_batch"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] } 
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
flexi_logger = "0.27.4"
log = "0.4.20"
chrono = "0.4.31"
chrono-tz = "0.9.0"
anyhow = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getset = "0.1.2"
derive-new = "0.6.0"
percent-encoding = "2.3.1"
futures = "0.3.30"
once_cell = "1.19.0"
regex = "1.10.5"
num-format = "0.4.4"
lazy_static = "1.5.0"
async-trait = "0.1.83"
strsim = "0.11.1"
toml = "0.8"
tokio-cron-scheduler = "0.13"
mssql-client = "0.6.0"